--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -3,9 +3,9 @@ import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import '../styles/tailwind.css';
 import 'animate.css';
-const { title } = Astro.props;
+const { title, description, ogtitle, ogdescription, schemamarkup } = Astro.props;
 ---
-<html lang="en">
+<html lang="da">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -13,6 +13,11 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{Astro.props.title}</title>
 		<!-- meta description mm. ind her... -->
+		 <meta name="description" content={Astro.props.description}>
+		 <meta property="og:locale" content="da_DK">
+		 <meta property="og:type" content="website">
+		 <meta property="og:title" content={Astro.props.ogtitle}>
+		 <meta property="og:description" content={Astro.props.ogdescription}>
 	</head>
 	<body>
 
