--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,8 +9,8 @@ import layout2 from "../assets/images/04-layout2.png";
 import layout3 from "../assets/images/04-layout3.png";
 import layout4 from "../assets/images/04-layout4.png";
 ---
-<MainLayout title="Titel">
-	<article class="grid mx-auto container gap-8 pt-8 prose">
+<MainLayout title="Bing bong" description="masser af text" ogtitle="30-09-2024" ogdescription="kom og vær med i dag">
+	<article class="grid mx-auto container gap-8 pt-8 prose scroll-smooth">
         <h1>Fire gode steps til at sammensætte en plakatvæg</h1>
 
 
@@ -26,7 +26,7 @@ import layout4 from "../assets/images/04-layout4.png";
                 kigge på de omgivelser vægen er en sammenhæng med.</li>
         </ul>
 
-        <Image src={farver} alt="" />
+        <Image src={farver} alt="farver" />
 
         <hr>
 
@@ -46,7 +46,7 @@ import layout4 from "../assets/images/04-layout4.png";
                 hinanden.</li>
         </ul>
 
-        <Image src={motiver} alt="" />
+        <Image src={motiver} alt="hallo" />
 
         <hr>
 
@@ -71,7 +71,7 @@ import layout4 from "../assets/images/04-layout4.png";
             <li>Vælger man at gentage det samme format kan man eks. bryde layoutet ved at tage et eller to billeder ud.
             </li>
         </ul>
-        <Image src={strl} alt="" />
+        <Image src={strl} alt="miv er dejlig og wifey material" />
 
         <hr>
         <h2>4) Layout af en spændende billedvæg</h2>
@@ -103,10 +103,10 @@ import layout4 from "../assets/images/04-layout4.png";
 
         <div class="grid grid-cols-2 gap-4">
 
-			<Image src={layout1} alt="" />
-            <Image src={layout2} alt="" />
-            <Image src={layout3} alt="" />
-            <Image src={layout4} alt="" />
+			<Image src={layout1} alt="nummer 1" />
+            <Image src={layout2} alt="nummer 2" />
+            <Image src={layout3} alt="nummer 3" />
+            <Image src={layout4} alt="nummer 4" />
 
         </div>
         <hr>
