--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,114 +2,32 @@
 import MainLayout from "../layouts/MainLayout.astro";
 import { Image } from 'astro:assets';
 import farver from "../assets/images/01-farver.png";
-import motiver from "../assets/images/02-motiver.png";
-import strl from "../assets/images/03-strl.png";
-import layout1 from "../assets/images/04-layout1.png";
-import layout2 from "../assets/images/04-layout2.png";
-import layout3 from "../assets/images/04-layout3.png";
-import layout4 from "../assets/images/04-layout4.png";
+import foto1 from "../assets/images/foto1.jpg";
+import foto2 from "../assets/images/foto2.jpg";
+import foto3 from "../assets/images/foto3.jpg";
+
 ---
-<MainLayout title="Bing bong" description="masser af text" ogtitle="30-09-2024" ogdescription="kom og vær med i dag">
-	<article class="grid mx-auto container gap-8 pt-8 prose scroll-smooth">
-        <h1>Fire gode steps til at sammensætte en plakatvæg</h1>
+<MainLayout title="Blues genren" description="Blues er en musikgenre, der opstod i de afroamerikanske samfund i det sydlige USA omkring slutningen.." ogtitle="Blues genren" ogdescription="Blues er en musikgenre, der opstod i de afroamerikanske samfund i det sydlige USA omkring slutningen..">
+	<div class="grid mx-auto container gap-2 pt-8 prose scroll-smooth">
+        <h1>Blues genren</h1>
+        <article>
+            <h2>Hvad er blues genren?</h2>
+            <p>Blues er en musikgenre, der opstod i de afroamerikanske samfund i det sydlige USA omkring slutningen af det 19. århundrede. 
+                Genren har rødder i spirituelle sange, arbejdssange, feltarbejdernes råb og afrikansk musiktradition, 
+                og den blev især udviklet af tidligere slaver og deres efterkommere.</p>
 
+            <ul>
+                <li>Bluesmusik er ofte bygget op omkring en 12-takters skala, der gentager sig. Denne struktur er et af de mest genkendelige træk ved genren.</li>
+                <li>Melodier i blues bruger en særlig skala kaldet blues-skalaen, som ofte inkluderer flade toner, der giver musikken en "blueset" eller melankolsk lyd.</li>
+            </ul>
 
-        <h2>1) Overvej hvordan farverne passer sammen</h2>
+            <Image src={foto1} alt="Man der spiller musik" />
 
-        <p>Overvej hvilket udtryk du gerne vil udtrykke med din plakatvæg. Skal det være ren sort/hvid plakat væg? Eller
-            en blanding af sort/hvid plakater og få plakater med farver? Det kan også være en samling af plakater i
-            samme farvetoner eller en vild farvelade med mange farver.</p>
+            <hr>
+        </article>
 
-        <ul>
-            <li>Vær bevidst om hvilke farver du sammensætter til plakatvæggen.</li>
-            <li>Når man beslutter sig for farvertoner til plakatvæggen kan det også være kan det være en god ide at
-                kigge på de omgivelser vægen er en sammenhæng med.</li>
-        </ul>
-
-        <Image src={farver} alt="farver" />
-
-        <hr>
-
-        <h2> 2) Hvilke motiver skal hænges på væggen?</h2>
-
-        <p>
-            Ligesom farverne er motiverne på plakaterne også med til at skabe et bestemt udtryk. Skal de være ensartede
-            eller skal der være kontraster når øjet ser væggen? Og kan nogle motiver være med til at skabe en
-            overraskelse
-            når man betragter væggen.
-        </p>
-
-        <ul>
-            <li>Hvis man har mange forskellige motiver kan det være en god ide at gruppere, så nogle af billederne taler
-                sammen.</li>
-            <li>Det kan også være en god ide at sammensætte motiver med stor kontrast, da de på den måde kan fremhæve
-                hinanden.</li>
-        </ul>
-
-        <Image src={motiver} alt="hallo" />
-
-        <hr>
-
-        <h2>3) Motiver i forskellige størrelser og formater</h2>
-
-        <p>
-            Overvej hvilken størrelse billeder du skal bruge til din væg. Er der mange forskellige formater der skal
-            passes
-            ind i layoutet eller vil du have præcis de samme to formater?
-        </p>
-
-        <p>
-            Flere formater og både bred og højformat skaber ofte et dynamisk udtryk, der kan være spændende at gå på
-            opdagelse i. Udfordringen med denne slags layout er at det ofte bliver meget rodet, og derfor kan det være
-            en
-            fordel at følge nogle principper der kan hjælpe med at skabe ro. Det kan også være indbydende for øjet bare
-            at
-            gentage den samme størrelse, - på den måde kan motivet også komme mere til sin ret.
-        </p>
-        <ul>
-            <li>Udvælg formater til din billedvæg. både plakater i forskellige størrelser, høj- og bred-format</li>
-            <li>Vælger man at gentage det samme format kan man eks. bryde layoutet ved at tage et eller to billeder ud.
-            </li>
-        </ul>
-        <Image src={strl} alt="miv er dejlig og wifey material" />
-
-        <hr>
-        <h2>4) Layout af en spændende billedvæg</h2>
-
-        <p>
-            At layoute en billedvæg med flere billeder er en svær øvelse. Er der er mange eller få billeder? Hvilke
-            farver,
-            hvilke motiver og hvilke størrelser skal sættes sammen som en enhed?
-        </p>
-
-        <p>
-            Man kan bruge forskellige metoder til at skabe et fedt udtryk. Her er nogle du kan overveje at bruge hvis du
-            har
-            mange billeder. Hvis du har billederne i fysisk form, så start med at lave layoutet på gulvet, stil dig op
-            på en
-            stol og tag et billede når du er tilfreds med første udkast. Lav denne øvelser et par gange før du begynder
-            at
-            hænge dem op på væggen.
-        </p>
-
-        <ul>
-            <li>Anvend linjer der flugter på forskellige måder.</li>
-            <li>Arbejd med at have den samme afstand mellem rammerne. Kan man have den sammen afstand giver det ro.</li>
-            <li>
-                Man kan også arbejde med at placere billederne lidt abstrakt på væggen. Det kan skabe et mere livligt og
-                overraskende look.
-            </li>
-        </ul>
-
-        <div class="grid grid-cols-2 gap-4">
-
-			<Image src={layout1} alt="nummer 1" />
-            <Image src={layout2} alt="nummer 2" />
-            <Image src={layout3} alt="nummer 3" />
-            <Image src={layout4} alt="nummer 4" />
-
-        </div>
-        <hr>
-
-    </article>
+        <article>
+            
+        </article>
+    </div>
 </MainLayout>
