--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,15 +19,75 @@ import foto3 from "../assets/images/foto3.jpg";
             <ul>
                 <li>Bluesmusik er ofte bygget op omkring en 12-takters skala, der gentager sig. Denne struktur er et af de mest genkendelige træk ved genren.</li>
                 <li>Melodier i blues bruger en særlig skala kaldet blues-skalaen, som ofte inkluderer flade toner, der giver musikken en "blueset" eller melankolsk lyd.</li>
+                <li>Bluesens tekster handler ofte om personlige problemer, tab, længsel eller kærlighed. Temaerne er ofte dybt følelsesladede og kommer fra en oplevelse af smerte, uretfærdighed eller håb.</li>
             </ul>
 
-            <Image src={foto1} alt="Man der spiller musik" />
+            <Image src={foto1} alt="Mand der spiller musik" />
 
             <hr>
         </article>
 
         <article>
+            <h2>Blues historik</h2>
+            <p>Blues har en rig og dyb historisk udvikling, som spænder over mere end et århundrede. Her er en gennemgang af de vigtigste faser i bluesmusikkens historie:</p>
             
+            <h3>Bluesens oprindelse (Slutningen af 1800-tallet)</h3>
+            <p>Blues opstod blandt afroamerikanske samfund i det sydlige USA efter slaveriets ophør. Musikken havde sine rødder i arbejds- og fællesskabssange, spirituelle sange, gospel, samt de såkaldte call-and-response-traditioner fra afrikansk kultur. Sange fra denne tid beskæftigede sig ofte med hårdt arbejde, frihed og ulighed, og musikken var typisk akustisk og spinkel.</p>
+            
+            <h3>Delta Blues (Tidligt 1900-tal)</h3>
+            <p>Mississippi Delta-regionen bliver ofte omtalt som bluesens fødested. Delta blues var en enkel, rå og intens form for blues, som ofte blev fremført solo med en akustisk guitar og sang. Musikere som Robert Johnson, Son House og Charley Patton er nogle af de mest kendte navne fra denne periode. Deres musik var præget af temaer som kærlighed, død og overlevelse under hårde vilkår.</p>
+            
+            <h3>Urbanisering og klassisk blues (1920'erne)</h3>
+            <p>I 1920'erne begyndte blues at bevæge sig fra landdistrikterne til byerne, hvor den blev mere sofistikeret og kommercielt tilgængelig. Mamie Smiths indspilning af "Crazy Blues" i 1920 markerede en milepæl som den første bluesplade, der blev en kommerciel succes. Denne periode kaldes også ofte for klassisk blues, og den blev domineret af kvindelige sangere som Bessie Smith og Ma Rainey, som ofte blev akkompagneret af større bands og orkestre.</p>
+            
+            <h3>Chicago Blues og elektrificeringen (1940'erne og 1950'erne)</h3>
+            <p>I 1960'erne oplevede blues en stor genopblomstring, især blandt hvide musikere og lyttere i USA og Storbritannien. Denne bluesrevival blev drevet af unge rockmusikere, som var stærkt inspirerede af tidlige blueslegender. Musikere som Eric Clapton, Jimi Hendrix, og bands som The Doors og Cream blandede bluesens sjælfulde elementer med den moderne rock, hvilket skabte en ny genre: bluesrock.</p>
+            
+            <h3> Bluesens indflydelse på rock and roll (1950'erne og 1960'erne)</h3>
+            <p>Fra 1970'erne og frem til i dag har bluesen fortsat udviklet sig og fusioneret med andre musikgenrer. Musikere som Stevie Ray Vaughan, Bonnie Raitt, og John Mayer har holdt bluesen i live med både respekt for traditionerne og en moderne twist. Samtidig har blues også påvirket genrer som funk, soul, jazz og hiphop. Moderne bluesfestivaler og bands holder genren relevant og levende, samtidig med at de hylder de klassiske rødder.</p>
+            
+            <h3>Bluesrevival (1960'erne)</h3>
+            <p>I 1960'erne oplevede blues en stor genopblomstring, især blandt hvide musikere og lyttere i USA og Storbritannien. Denne bluesrevival blev drevet af unge rockmusikere, som var stærkt inspirerede af tidlige blueslegender. Musikere som Eric Clapton, Jimi Hendrix, og bands som The Doors og Cream blandede bluesens sjælfulde elementer med den moderne rock, hvilket skabte en ny genre: bluesrock.</p>
+            
+            <h3>Moderne blues og fusion (1970'erne til i dag)</h3>
+            <p>Bluesen har udviklet sig fra de amerikanske sydstaters plantager og arbejdssange til en af de mest indflydelsesrige musikgenrer i verden. Dens udvikling har formet og påvirket mange af de musikformer, vi kender i dag, og den fortsætter med at være en vigtig kilde til musikalsk udtryk og kreativitet.</p>
+        
+            <Image src={foto2} alt="Mand der spiller blues musik" />
+
+            <hr>
+        </article>
+
+        <article>
+            <h2>Blues instrumenter</h2>
+            <p>Bluesmusikken anvender en række forskellige instrumenter, som alle bidrager til dens unikke lyd og følelsesmæssige dybde. Nogle af de mest almindelige instrumenter, der bruges i blues, er:</p>
+
+            <h3>Guitar</h3>
+             <ul>
+                <li>Akustisk guitar: I tidlig blues, især i Delta blues, var akustisk guitar det primære instrument. Spillestilen involverede ofte fingerpicking og slide-guitar, hvor en flaskehals eller et metalstykke blev brugt til at glide hen over strengene og skabe en klagende, bølgende lyd.</li>
+                <li>Elektrisk guitar: Med urbaniseringen af blues i 1940'erne og frem blev den elektriske guitar dominerende, især i Chicago blues. Elektriske guitarer tillod musikere som B.B. King, Muddy Waters, og Albert King at skabe kraftige, emotionelle soloer og en mere intens lyd.</li>
+            </ul>
+
+            <h3>Mundharmonika</h3>
+            <p>Mundharmonika, eller "harp", er et andet ikonisk instrument i blues. Det er let at transportere og kan frembringe en utrolig følelsesmæssig og udtryksfuld lyd. Mundharmonika bruges ofte til at efterligne menneskelig klagesang og kan spille både melodi og rytme. Little Walter og Sonny Boy Williamson er to berømte blues-mundharmonikaspillere.</p>
+
+            <h3>Klaver (Piano)</h3>
+            <p>Klaveret har også spillet en central rolle i bluesmusikken, især i undergenrer som boogie-woogie. Bluespianister som Otis Spann og Pinetop Perkins skabte komplekse rytmiske mønstre og riff, der tilføjede dybde til bluesbandets lyd. Klaveret er også blevet brugt til langsommere, mere melankolske bluesstykker, hvor det understøtter vokalen med harmonisk rigdom.</p>
+
+            <h3>Bas</h3>
+            <ul>
+                <li>Kontrabas: Tidligt blev kontrabassen (stand-up bass) ofte brugt til at give bluesmusikken en solid rytme og dybde. Bassens funktion i blues er at opretholde rytmen og støtte de andre instrumenter, især i mere akustiske eller små ensembleopsætninger.</li>
+                <li>Elektrisk bas: Med elektrificeringen af blues blev den elektriske basguitar populær, især i Chicago blues og bluesrock. Den elektriske bas giver en stærkere og mere fremtrædende bund i musikken.</li>
+            </ul>
+
+            <h3>Trommer</h3>
+            <p>Trommerne blev især en del af bluesen, da den flyttede fra landsbyen til byen og blev elektrificeret. Trommesættet bruges til at skabe de karakteristiske swingende og shuffle-rytmer, som er så vigtige i mange bluesnumre. Shuffle-beatet, hvor trommerne spiller en ternær rytme, er meget udbredt i blues og giver musikken en afslappet, gyngende følelse.</p>
+
+            <h3>Blæseinstrumenter (Saxofon, trompet)</h3>
+            <p>Blæseinstrumenter, som saxofoner og trompeter, blev især brugt i den mere urbane, jazzinspirerede blues og i big band blues. De blev brugt til at tilføje en fyldigere lyd og skabe harmoni eller improviserede soloer. Big Joe Turner og andre kunstnere inkorporerede blæsere for at give deres bluesmusik et mere dynamisk og festligt præg.</p>
+        
+             <Image src={foto3} alt="Mand med saxofon" />
+
+            <hr>
         </article>
     </div>
 </MainLayout>
